force-app/main/default/objects/Lodging__c/Lodging__c.object-meta.xml
<CustomObject>
    <label>Lodging</label>
    <nameField>
        <label>Lodging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lodgings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>