force-app/main/default/objects/Lodging__c/fields/Are_You_Extend_Your_Trip__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Extend_Your_Trip__c</fullName>
    <label>Are You Extend Your Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Extend</fullName>
            </value>
            <value>
                <fullName>Post Extend</fullName>
            </value>
            <value>
                <fullName>Pre and Post Extend</fullName>
            </value>
            <value>
                <fullName>No Extend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>