force-app/main/default/objects/Lodging__c/fields/Preferred_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Arrival_Date__c</fullName>
    <label>Preferred Arrival Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>05/01/2023</fullName>
            </value>
            <value>
                <fullName>05/02/2023</fullName>
            </value>
            <value>
                <fullName>05/03/2023</fullName>
            </value>
            <value>
                <fullName>05/04/2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>