force-app/main/default/objects/Lodging__c/fields/Preferred_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Departure_Date__c</fullName>
    <label>Preferred Departure Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>05/05/2023</fullName>
            </value>
            <value>
                <fullName>05/06/2023</fullName>
            </value>
            <value>
                <fullName>05/07/2023</fullName>
            </value>
            <value>
                <fullName>05/08/2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>